--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ spring.security.oauth2.client.registration.github.client-name=github
 spring.security.oauth2.client.registration.github.client-id= Iv23li62Gqf5P1IDozfy
 spring.security.oauth2.client.registration.github.client-secret=4a34df433c286a6ea562d65d3cac4a2d80439380
 spring.security.oauth2.client.registration.github.scope=email,profile
+
+
+logging.level.org.springframework.web.bind=DEBUG
