adding new feature on the date 21/10/2024

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,16 @@ spring.security.oauth2.client.registration.github.scope=email,profile
 
 
 logging.level.org.springframework.web.bind=DEBUG
+
+# handling maximum  file size uploading 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+# setup the cloud configuration 
+
+cloudinary.cloud.name=dvuxe2i6l
+cloudinary.api.key=539826275259576
+cloudinary.api.secret=lOttM8ucRbnq_5aTHSNWe8bSBJg
+
+
